@@ -85,7 +85,7 @@ The search is done in the following order:
 Author
 ======
 
-2006 - 2008 Harri Pitkänen (hatapitk@iki.fi)
+2006 - 2009 Harri Pitkänen (hatapitk@iki.fi)
 
 
 Website
