@@ -1,4 +1,4 @@
-.TH VOIKKOHYPHENATE 1 "2008-12-05"
+.TH VOIKKOHYPHENATE 1 "2009-01-03"
 .SH NAME
 voikkohyphenate \- test program for Voikko hyphenator
 .SH SYNOPSIS
@@ -28,6 +28,8 @@ Set
 as the value of option VOIKKO_INTERSECT_COMPOUND_LEVEL.
 .TP
 .BI no_ugly_hyphenation= n
+.TP
+.BI hyphenate_unknown_words= n
 Set the value of the specified boolean option.
 .I n
 can be either 0 (false) or 1 (true).
