@@ -1,3 +1,8 @@
+2009-01-03 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Add option VOIKKO_OPT_HYPHENATE_UNKNOWN_WORDS.
+	* Print error if unknown option is given to a test tool.
+
 2008-12-13 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Port gcanalysis.c, gcerror.c, voikko_utils.c,
